crates/capsec/tests/compile_fail/sendcap_cannot_grant_wrong_perm.stderr
error[E0277]: the trait bound `Cap<capsec::FsRead>: capsec::Has<capsec::NetConnect>` is not satisfied
  --> tests/compile_fail/sendcap_cannot_grant_wrong_perm.rs:11:15
   |
11 |     needs_net(&cap);
   |     --------- ^^^^ the trait `capsec::Has<capsec::NetConnect>` is not implemented for `Cap<capsec::FsRead>`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `capsec::Has<P>`:
             `Cap<(Ambient, Ambient)>` implements `capsec::Has<Ambient>`
             `Cap<(Ambient, EnvRead)>` implements `capsec::Has<Ambient>`
             `Cap<(Ambient, EnvRead)>` implements `capsec::Has<EnvRead>`
             `Cap<(Ambient, EnvWrite)>` implements `capsec::Has<Ambient>`
             `Cap<(Ambient, EnvWrite)>` implements `capsec::Has<EnvWrite>`
             `Cap<(Ambient, FsAll)>` implements `capsec::Has<Ambient>`
             `Cap<(Ambient, FsAll)>` implements `capsec::Has<FsAll>`
             `Cap<(Ambient, FsWrite)>` implements `capsec::Has<Ambient>`
           and $N others
note: required by a bound in `needs_net`
  --> tests/compile_fail/sendcap_cannot_grant_wrong_perm.rs:5:23
   |
 5 | fn needs_net(_: &impl Has<NetConnect>) {}
   |                       ^^^^^^^^^^^^^^^ required by this bound in `needs_net`
